Fix toggle for OS high contrast, update Github modal link (#8069)
* Fix toggle for OS high contrast, update Github modal link

* Update role for language selector items

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -874,13 +874,21 @@
     }
 }
 
+/* OS-specific Fixes (eg Windows High Contrast) */
+
+@media (forced-colors: active) {
+    .ui.toggle.checkbox .box:after,
+    .ui.toggle.checkbox label:after {
+        forced-color-adjust: none;
+    }
+}
+
 @media (forced-colors: active) and (prefers-color-scheme: light) {
     #homemenu .logo.organization img,
     #homemenu .logo.brand img {
         filter: invert(1);
     }
 }
-
 
 /* > Small Monitor */
 @media only screen and (min-width: @computerBreakpoint) {
